<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="start">\"Pub?\"</string>
    <string name="app_name">Pub</string>
    <string name="back">back</string>
    <string name="send_invites">Send Invites</string>
    <string name="save">Save</string>
  	<string name="organise">Organise</string>
  	<string name="mainpubtitle">Pub?</string>
 	<string name="location">Your current location is:</string> 
 	<string name="default_location">Unknown</string> 
  	<string name="all_guests">View chosen guests</string> 
  	<string name="use_pub">Use pub</string>
  	<string name="pub_location">Pub:</string>
  	<string name="time_but">Set initial starting time</string>
  	<string name="use_guest">Use selected friend</string>
  	<string name="choose_date">Choose date:</string>
  	<string name="choose_time">Choose time:</string>
  	<string name="invites">View invites</string>
  	<string name="location_error"></string>  	
  	<string name="test">Test</string>
  	<string name="add_guest">Add guest</string>  	
  	<string name="show_sent_invites">Show Sent Invites</string>
  	<string name="it_is_on">It\'s on!</string>
  	<string name="update">Update event</string>
  	
  	<string name="current_events">Current Events</string>
  	
  	<string name="hosting">Hosting</string>
  	
  	<string name="waiting_for_response">Waiting For Response</string>
  	
  	<string name="going">Going - Hold for options</string>
  	<string name="hold_for_options">Hold for options</string>
  	<string name="pub">Pub:</string>
  	
  	<string name="current_start_time">Current Start Time:</string>
  	
  	<string name="guests">Mates:</string>
  	
  	<string name="confirm">Confirm</string>
  	
  	<string name="host_name">from</string>
  	
  	<string name="make_a_comment">Make a comment?</string>
  	
  	<string name="delete_event">DELETE EVENT!!!</string>
  	
  	<string name="decline">Decline</string>
  	
  	<string name="send">Send</string>
  	
  	<string name="available_from">Available from:</string>
  	
  	<string name="pub_name">Pub Name:</string>
  	
  	<string name="attach">Attach</string>
  	
  	<string name="cancel">Cancel</string>
  	<string name="cancelunderline"><u>Cancel</u></string>
  	
  	<string name="edit">Edit</string>
  	
  	<string name="time_title">Time:</string>
  	
  	<string name="guest_title">Mates:</string>
  	
  	<string name="search">Search</string>

  	<string name="logoutfb">Logout</string>
  	
  	<string name="error">Error</string>
  	
  	<string name="plus">+</string>
  	<string name="minus">-</string>
    
</resources>
