<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/orgmain">

        <TextView
            android:id="@+id/userInvitesPubNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pub_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="30sp"
            android:textSize="25sp"  />

        <TextView
            android:id="@+id/userInviteStartTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/current_start_time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25sp"  />
			
		<TextView
		android:id="@+id/userInviteHostNameText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/host_name"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textSize="25sp"  />

        <TextView
            android:id="@+id/guestHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/guests"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25sp"  />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:cacheColorHint="#00000000" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/decline"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true" />

        <Button
            android:id="@+id/going"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/going" 
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>

    </LinearLayout>

</LinearLayout>