<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/organise_screen"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/location_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <TextView
            android:id="@+id/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@+id/location_title"
            android:text="@string/default_location"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <TextView
        android:id="@+id/pub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pub_location"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/pub_button"
        style="?android:attr/editTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:gravity="center|center_horizontal"
        android:text="test_data"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/time_button"
        style="?android:attr/editTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:gravity="center"
        android:text="test_data"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/guest_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/send_invites_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="60dp"
            android:text="@string/send_invites" />

        <Button
            android:id="@+id/save_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp"
            android:text="@string/save" />
    </RelativeLayout>

</LinearLayout>