<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingTop="4dip"
     android:paddingBottom="6dip"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">

    <TextView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/delete_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_event"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/refresh_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refresh"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
</LinearLayout>